--- a/build-environment.yml
+++ b/build-environment.yml
@@ -4,8 +4,9 @@ channels:
 dependencies:
   - python
   - pip
-  - node=18
+  - nodejs=18
   - jupyter_server
   - jupyterlite-core >=0.1.0,<0.2.0
   - pip:
-    - jupyterlite-xeus-python >=0.8.1,<0.9.0
+    - voici==0.4.4
+    - jupyterlite-xeus-python==0.8.1
