--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         shell: bash -l {0}
         run: |
           cp README.md notebooks
-          jupyter lite build --contents notebooks --output-dir dist
+          voici build --contents notebooks --output-dir dist --apps lab --apps retro
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
